--- a/01_Distributed_Machine_Learning/03_Helm/exo1/mlflow-service.yaml
+++ b/01_Distributed_Machine_Learning/03_Helm/exo1/mlflow-service.yaml
@@ -1,12 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mlflow
+  name: mlflow-service
 spec:
-  type: NodePort
   ports:
-  - port: 5000
-    targetPort: 5000
-    nodePort: 30001
+    - name: http
+      port: 80
+      protocol: TCP
+      targetPort: 8080
+    - name: https
+      port: 443
+      protocol: TCP
+      targetPort: 8080
   selector:
-    app: mlflow
+    app: mlflow-dashboard
+  type: ClusterIP
